--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
         "@types/react-router-dom": "^5.3.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^4.8.0",
+        "react-responsive": "^9.0.2",
         "react-router-dom": "^6.9.0"
     },
     "devDependencies": {
         "@types/react": "^18.0.27",
         "@types/react-dom": "^18.0.10",
+        "@types/react-icons": "^3.0.0",
+        "@types/react-responsive": "^8.0.5",
         "@types/sass": "^1.43.1",
         "@typescript-eslint/eslint-plugin": "^5.53.0",
         "@typescript-eslint/parser": "^5.53.0",
